technical port to neoforge 1.21.1 done
holes dont work as expected though